--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,20 +1,39 @@
 body{
   margin:0;
   padding:0;
+  background: #EEE;
+  font-family:helvetica;
 }
 
-.loader {
+#loading_screen{
+  position:absolute;
     border: 16px solid #f3f3f3; /* Light grey */
     border-top: 16px solid #3498db; /* Blue */
     border-radius: 50%;
-    width: 120px;
-    height: 120px;
-    animation: spin 2s linear infinite;
+    width: 100px;
+    height: 100px;
+  top:50%;
+  left:50%;
+  margin-left:-50px;
+  margin-top:-50px;
+    animation: spin 1s linear infinite;
 }
+
 
 @keyframes spin {
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
+}
+
+#server_chooser{
+  position: absolute;
+  width: 300px;
+  height: 200px;
+  z-index: 15;
+  top: 50%;
+  left: 50%;
+  margin: -100px 0 0 -150px;
+  background: red;
 }
 
 #color_chooser{
@@ -35,7 +54,7 @@ body{
   border-radius:10px;
   width:200px;
   font-weight:bold;
-  font-family:helvetica;
+
 }
 
 .top_element{
